# nu_plugin_qr_maker

./: Cargo.toml  LICENSE  README.md  nupm.nuon
src/: main.rs  to_qr.rs
