[package]
name = "nu_plugin_terminal_qr"
license = "MIT"
authors = ["Mr. White <white@neuron.my>", "Motalleb Fallahnezhad <fmotalleb@gmail.com>"]
keywords = ["nushell", "qr-code", "plugin"]
homepage = "https://github.com/Neuron-Mr-White/nu_plugin_qr_maker"
repository = "https://github.com/Neuron-Mr-White/nu_plugin_qr_maker"
description = "A nushell plugin to create qr code in terminal"
version = "1.1.1"
edition = "2021"
readme = "README.md"

[dependencies]
nu-plugin = "0.109.1"
nu-protocol = { version = "0.109.1", features = ["plugin"] }
qr2term = { version = "0.3.1" }
